test/spec_vectors/i32/fail/module_5.wat
(module (func $type-unary-operand-empty-in-else (i32.const 0) (i32.const 0) (if (result i32) (then (i32.const 0)) (else (i32.eqz))) (drop)))